--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <form action="" method="post">
                         <input type="text" name="name" placeholder="NAME" autocomplete="off" required>
                         <input type="email" name="email" placeholder="EMAIL" autocomplete="off" required>
-                        <input type="number" name="phone" placeholder="PHONE NUMBER" autocomplete="off" required>
+                        <input type="text" name="phone" placeholder="PHONE NUMBER" autocomplete="off" required>
                         <input type="text" name="inquiry" placeholder="YOUR MESSAGE" autocomplete="off">
                     </form> 
                  </div>
